Attempting to rotate curve points with Automatic handle type doesn't switch them to Aligned handle type #76563

Closed
opened 2020-05-08 20:00:50 +02:00 by Artur · 12 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92

Blender Version
Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-05-07 21:33, hash: c6cda3c09c
Worked: (newest version of Blender that worked as expected)

Short description of error
rotation in edit mode doesnt work for beziercircle when only one vertex selected (without handels)

Exact steps for others to reproduce the error

  1. open a new scen,
  2. add a bezier circle,
  3. go to edit mode,
  4. select one of the control point, not the handles
  5. hit R.
    Nothing is happening, curve stays unmoved/deformed, rotation only works when handle(s) is/are selected instead.

When adding bezier curve in edit mode it enough to select only control point to rotate it.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92 **Blender Version** Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-05-07 21:33, hash: `c6cda3c09c` Worked: (newest version of Blender that worked as expected) **Short description of error** rotation in edit mode doesnt work for beziercircle when only one vertex selected (without handels) **Exact steps for others to reproduce the error** 1. open a new scen, 2. add a bezier circle, 3. go to edit mode, 4. select one of the control point, not the handles 5. hit R. Nothing is happening, curve stays unmoved/deformed, rotation only works when handle(s) is/are selected instead. When adding bezier *curve* in edit mode it enough to select only control point to rotate it.
Author

Added subscriber: @arturmachura

Added subscriber: @arturmachura
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

6f985574b7 works fine
didnt test the version you said.

6f985574b7 works fine didnt test the version you said.
Author

I made a video on official current version. bug0001-1361.mp4

I made a video on official current version. [bug0001-1361.mp4](https://archive.blender.org/developer/F8521392/bug0001-1361.mp4)
Member

It's been same since 2.81a. For a circle, if you select one of the handles (or both, using shift click), it rotates. If you select control point, it doesn't.
https://docs.blender.org/manual/en/2.83/modeling/curves/structure.html#bezier

It's been same since 2.81a. For a circle, if you select one of the handles (or both, using shift click), it rotates. If you select control point, it doesn't. https://docs.blender.org/manual/en/2.83/modeling/curves/structure.html#bezier
Author

I think it should be consistent between all bezier objects because if you untick circle and change name there is no sign that this is a circle in the first place.

I think it should be consistent between all bezier objects because if you untick circle and change name there is no sign that this is a circle in the first place.
Ankit Meel changed title from rotation in edit mode for beziercircle doesn`t work correct. to Rotation for beziercircle doesn't work when control point selected 2020-05-10 14:04:43 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Demeter Dzadik changed title from Rotation for beziercircle doesn't work when control point selected to Attempting to rotate curve points with Automatic handle type doesn't switch them to Aligned handle type 2020-05-11 16:57:45 +02:00
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

Took the liberty to move the title a bit closer to the root of the issue. It doesn't matter if you start with a circle or not - it just so happens that the default BezierCircle object's control points are set to Automatic handle type. (Note: You can change handle type of selected curve points with the V key) It would make sense for them to automatically switch to Aligned when attempting to rotate them. But this might have been a deliberate change, I'm not sure. It's weird that it works when selecting the sub-handles.

Took the liberty to move the title a bit closer to the root of the issue. It doesn't matter if you start with a circle or not - it just so happens that the default BezierCircle object's control points are set to Automatic handle type. (Note: You can change handle type of selected curve points with the V key) It would make sense for them to automatically switch to Aligned when attempting to rotate them. But this might have been a deliberate change, I'm not sure. It's weird that it works when selecting the sub-handles.
Campbell Barton self-assigned this 2020-05-15 13:37:43 +02:00

This issue was referenced by fe0036c586

This issue was referenced by fe0036c586d334a17a0b6bc008790749f58273be

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This issue was referenced by 9464260ed7

This issue was referenced by 9464260ed786c7cd76d6c9c83590a3b13407fdcd
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76563
No description provided.