Fix T76563: Transforming an auto-aligned point won't set it aligned

When local origins are used or a single control point is selected,
change the handle types from auto to aligned.